# city-search-api-demo

./: .gitignore  README.md
citysearch_api/: .env  Cargo.toml
citysearch_api/benches/: scoring_benchmark.rs
citysearch_api/src/: main.rs  scoring.rs  tests.rs
citysearch_db/: citysearch_db_util.py  db_test.sql  reset_database.sql
