[package]
name = "citysearch_api"
version = "0.1.0"
authors = ["calem"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
actix = "0.7"
actix-web = "0.7"
env_logger = "0.5"
postgres = "0.15"
num_cpus = "1.9.0"
chrono = "0.4.6"
json = "0.11.13"
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"
lazy_static = "1.2.0"
geo = "0.11.0"
strsim = "0.8.0"

[features]
parallelscoring = []
logscoring = []
