[package]
name = "citysearch_api"
version = "0.1.0"
authors = ["Calem Bendell <calem.j.bendell@gmail.com>"]
license = "MPL 2.0"
edition = "2018"
readme = "../README.md"
autobenches = true

[dependencies]
argparse = "0.2.2"
actix = "0.7"
actix-web = "0.7"
env_logger = "0.5"
postgres = "0.15"
json = "0.11.13"
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"
lazy_static = "1.2.0"
geo = "0.11.0"
strsim = "0.8.0"
ndarray = "0.12.1"

[dev-dependencies]
approx = "0.3.1"
criterion = "0.2.10"

[features]
parallelscoring = []
logscoring = []

[[bench]]
name = "scoring_benchmark"
harness = false
